# only-listening-your-voice

./: .gitignore  CMakeLists.txt  README.md  TASK_STATUS.md  partitions.csv  sdkconfig.defaults  tech-stack.md
components/audio/: CMakeLists.txt  README.md  audio_capture.c  audio_capture.h
components/comm/: CMakeLists.txt  README.md  event_reporter.c  event_reporter.h
components/config/: CMakeLists.txt  model_loader.c  model_loader.h  sys_config.h
components/decision/: CMakeLists.txt  README.md  enroll.c  enroll.h  fsm.c  fsm.h  led_indicator.c  led_indicator.h  task_decision.c  task_decision.h
components/frontend/: CMakeLists.txt  README.md  feature_buffer.c  feature_buffer.h  frontend_pipeline.c  frontend_pipeline.h  mel_filterbank_const.h  micro_frontend.c  micro_frontend.h
components/kws/: CMakeLists.txt  README.md  kws_engine.c  kws_engine.h  task_kws.c  task_kws.h
components/sv/: CMakeLists.txt  README.md  sv_engine.c  sv_engine.h  task_sv.c  task_sv.h
config/: model_loader.c  pin_defs.h  sys_config.h
main/: CMakeLists.txt  idf_component.yml  main.c
models_fat/: README.txt  model_kws.tflite  model_sv.tflite
tools/: convert_kws.py  convert_kws_v2.py  convert_sv.py  convert_sv_v2.py  generate_filterbank.py  onnx2tflite_v2.py
